<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="android.cars.misiorek.net.cars90.CarPreviewActivity"
    tools:showIn="@layout/activity_car_preview"
    android:weightSum="1.0">

<ImageView
    android:id="@+id/photoCar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

<LinearLayout
    android:id="@+id/layoutBrand"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="1.0"
    android:layout_marginTop="20dp"
    android:layout_below="@id/photoCar">


    <TextView
        android:id="@+id/brandLabel"
        android:layout_weight="0.5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/brand_label"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/brandValue"
        android:layout_weight="0.5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/brandLabel"
        android:textSize="20dp"/>

</LinearLayout>

<LinearLayout
    android:id="@+id/layoutModel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/layoutBrand"
    android:orientation="horizontal"
    android:layout_marginTop="40dp"
    android:weightSum="1.0">

    <TextView
        android:id="@+id/modelLabel"
        android:layout_weight="0.5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/model_label"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/modelValue"
        android:layout_weight="0.5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20dp"/>
</LinearLayout>

<LinearLayout
    android:id="@+id/layoutDateOfManufacture"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/layoutModel"
    android:weightSum="1.0"
    android:layout_marginTop="40dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/dateOfManufactureLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_weight="0.5"
        android:text="@string/date_of_manufacture_label" />

    <TextView
        android:id="@+id/dateOfManufactureValue"
        android:layout_weight="0.5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20dp" />

</LinearLayout>

<LinearLayout
    android:id="@+id/layoutRegistrationNumber"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/layoutDateOfManufacture"
    android:weightSum="1.0"
    android:layout_marginTop="40dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/registrationNumberLabel"
        android:layout_weight="0.5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/registration_number_label" />

    <TextView
        android:id="@+id/registrationNumberValue"
        android:layout_weight="0.5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20dp" />

</LinearLayout>

<LinearLayout
    android:id="@+id/layoutIsAvailable"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="40dp"
    android:weightSum="1.0"
    android:layout_below="@id/layoutRegistrationNumber">

    <TextView
        android:id="@+id/isAvailableLabel"
        android:layout_weight="0.5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/is_available_label" />

    <TextView
        android:id="@+id/isAvailableValue"
        android:layout_weight="0.5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20dp" />

</LinearLayout>



</RelativeLayout>
