<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="android.cars.misiorek.net.cars90.CarPreviewActivity"
    tools:showIn="@layout/activity_car_preview"
    android:weightSum="1.0">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layoutBrand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1.0"
                android:layout_marginTop="20dp">


                <TextView
                    android:id="@+id/brandLabel"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/brand_label"
                    android:textStyle="bold"
                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/brandField"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/brandLabel"
                    android:textSize="20dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutModel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layoutBrand"
                android:orientation="horizontal"
                android:layout_marginTop="40dp"
                android:weightSum="1.0">

                <TextView
                    android:id="@+id/modelLabel"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/model_label"
                    android:textStyle="bold"
                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/modelField"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/dateOfManufactureLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textStyle="bold"
                android:text="@string/date_of_manufacture_label"
                android:textAlignment="center"
                android:layout_below="@id/layoutModel"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"/>

            <DatePicker
                android:id="@+id/dateOfManufactureField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/dateOfManufactureLabel"
                android:paddingTop="30dp"
                android:paddingBottom="30dp">

            </DatePicker>

            <LinearLayout
                android:id="@+id/layoutRegistrationNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/dateOfManufactureField"
                android:weightSum="1.0"
                android:layout_marginTop="40dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/registrationNumberLabel"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:text="@string/registration_number_label" />

                <EditText
                    android:id="@+id/registrationNumberField"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="20dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutIsAvailable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="40dp"
                android:weightSum="1.0"
                android:layout_below="@id/layoutRegistrationNumber">

                <TextView
                    android:id="@+id/isAvailableLabel"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:text="@string/is_available_label" />



            </LinearLayout>

        </LinearLayout>

    </ScrollView>



</RelativeLayout>
